<resources>
    <string name="app_name">CalorieCountdown</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome_message">Welcome to </string>
    <string name="forgot">Forgot Password ?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">This is the macro fragment</string>
    <string name="content_authority">com.appguru.android.caloriecountdown</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="action_create_acct">Create Account</string>
    <string name="Gender">Gender</string>
    <string name="Weight">Weight(Kg)</string>
    <string name="Height">Height</string>
    <string name="Age">Age</string>
    <string name="goal">Goal</string>
    <string name="radio_LossWeight">LoseWeight</string>
    <string name="radio_MaintainWeight">MaintainWeight</string>
    <string name="radio_GainWeight">GainWeight</string>
    <string name="SecurityQ">Security Question</string>
    <string name="Answer">Answer</string>

    <string name="SecurityQuestion">Choose a country</string>
    <string name="EnterFood">Enter Food Item</string>
    <string name="action_search_food">search</string>
    <string name="Consumed">Total calories consumed today</string>
    <string name="Remaining">Total Calories remaining for today</string>
    <string name="portion">Portion</string>
    <string name="Quantity">Quantity</string>
    <string name="addFood">Add Food</string>
    <string name="Required">Your total calorie requirement: </string>
    <string name="action_update_profile">Update Profile</string>
    <string name="submit_answer">Submit</string>
    <string name="save">Reset</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="addFoodToDatabase">Add selected food</string>
    <string name="Submit_Security_Answer">Submit Security Answer</string>
    <string name="SignIn">SignIn to the App</string>
    <string name="SignUp">Create Account</string>
    <string name="SearchFood">Search Food Item</string>
    <string name="UpdateProfile">Update My Profile</string>
    <string name="ResetPassword">Reset My Password</string>
    <string name="MacroNutrient">This is macro fargment</string>
    <string name="new_password">Enter new Password</string>

    <string-array name="question_arrays">
        <item>What is your favourite tv show ?</item>
        <item>What city were you born in ?</item>
        <item>Which was your first car ?</item>
        <item>What is your favourite food ?</item>
        <item>Which High school did you attend ?</item>

    </string-array>

</resources>
